feat: finaliza implementação de backend

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <title>Hello World</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <button>add</button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
